# streamdeck-razer-battery

./: .gitmodules  README.md
.github/workflows/: ci.yml
Sources/: CMakeLists.txt  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  main.cpp
Sources/com.alexjsp.razer-battery.sdPlugin/: en.json  manifest.json
Sources/macOS/: RazerBatteryHelper.cpp  RazerBatteryHelper.h
